[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI/Scenes/Joystick.tscn" type="PackedScene" id=1]
[ext_resource path="res://Object Images/Key.png" type="Texture" id=2]
[ext_resource path="res://Object Images/KeyDark.png" type="Texture" id=3]
[ext_resource path="res://Scripts/KeysUI.gd" type="Script" id=4]
[ext_resource path="res://UI/Images/SettingsUnpressed.png" type="Texture" id=5]
[ext_resource path="res://UI/Images/SettingsPressed.png" type="Texture" id=6]
[ext_resource path="res://Maps/Map Scenes/Settings.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
resource_name = "UI_fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Control" type="Control"]
process_priority = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" parent="." instance=ExtResource( 1 )]
position = Vector2( 60, 135 )
scale = Vector2( 1.2, 1.2 )

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 320, 30 )
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer3"]
margin_right = 158.0
margin_bottom = 180.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer3/HBoxContainer"]
margin_right = 158.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_styles/panel = SubResource( 1 )

[node name="KeysNotPicked" type="TextureRect" parent="HBoxContainer3/HBoxContainer/PanelContainer"]
margin_right = 20.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeysPicked" type="TextureRect" parent="HBoxContainer3/HBoxContainer/PanelContainer"]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 27.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer3"]
margin_left = 162.0
margin_right = 320.0
margin_bottom = 180.0
size_flags_horizontal = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="HBoxContainer3/HBoxContainer2"]
margin_left = 126.0
margin_right = 158.0
margin_bottom = 32.0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Setting" parent="." instance=ExtResource( 7 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/UI_fade = SubResource( 2 )
[connection signal="pressed" from="HBoxContainer3/HBoxContainer2/Settings" to="." method="_on_Settings_pressed"]
